# cpp-homeworks

./: .gitignore  README.md
FileAnalyzer/: CMakeLists.txt  file_item.cpp  file_item.h  file_scanner.cpp  file_scanner.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
cinema-uml-project/: README.md
cinema-uml-project/docs/: specifications.md
homework-01/: README.md  main.cpp
homework-02/: BigData  README.md  main.cpp
homework-03/: FileManager  README.md  Sensor  main.cpp
homework-04/: OrderSystem  README.md  main.cpp
homework-05/: README.md  SafeBank.cpp  UnsafeBank.cpp
homework-06/: README.md
homework-08/: MathCalculator.cpp  MathLib.lib  README.md
homework-08/MathLib/: MathLib.cpp  MathLib.h
homework-09/: CMakeLists.txt  README.md  conanfile.txt
homework-09/src/app/: CMakeLists.txt
homework-09/src/app/include/app/: cli_handler.h
homework-09/src/app/src/: cli_handler.cpp  main.cpp
homework-09/src/core/: CMakeLists.txt
homework-09/src/core/include/core/: project.h  storage.h  task.h
homework-09/src/core/src/: project.cpp  storage.cpp  task.cpp
